2011-10-18 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XWindowBuffer.h: Protect the usage of shm.

2011-10-17 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Test for X shape extension
	* configure: Regenerate
 	* config.h.in: Regenerate
	* Source/x11/XGServerWindow.m (-restrictWindow:toImage:),
	* Source/x11/XWindowBuffer.m (-_exposeRect:): Protect usage of
	shape extension.
	Should fix bug #34552.

2011-10-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/GNUmakefile:
	* Source/cairo/CairoContext.m:
	* Source/cairo/CairoSurface.m:
	* Source/cairo/XGCairoModernSurface.m:
	* Headers/cairo/XGCairoModernSurface.h:
	* Headers/cairo/CairoSurface.h: New cairo surface which uses
	cairo_surface_create_similar to create a back buffer which
	has an alpha channel, even if the X server doesn't support
	surfaces with alpha. This new surface is also made the default
	since this seems to be the recommended way to double buffer
	with cairo.

2011-09-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoContext.m: revert the last change for now

2011-09-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoContext.m: Switch to XGCairoSurface by default,
	because it fixes the corrupted display problem reported by Riccardo
	on 16-bit displays.

2011-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-saveClip, -restoreClip:,
	-drawGradient:...): Check that the _ct isnt NULL.
	* Source/cairo/CairoGState.m (doubleFromUserSpace,
	floatToUserSpace): Use correct types in these helper functions.

2011-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (GSActionForDragOperation,
	GSDragOperationForAction): Corrected drag type conversion.
	Patch by Andreas Schick <andreas.schik@googlemail.com>

2011-09-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m (-drawGState:...): Check that the source
	context is non-NULL before calling cairo_get_target on it. Log a warning